--- a/calculator/styles.css
+++ b/calculator/styles.css
@@ -24,7 +24,7 @@ body {
     border-radius: 15px;
     box-shadow: 3px 3px 5px #000;
     background-color: #50577A;
-    color: #2600ff;
+    color: #970c0c;
     max-width: 20rem;
   }
   #display{
